2004-08-09  Paolo Nenzi <p.nenzi@ieee.org>

	*   Updated and corrected test files in "tests" directory. Added
	    "examples" directory.
	    
	*   src/spicelib/devices/bsim3/b3set.c: Added Dietmar Warning 
	    <warning@danalyse.de> patch to solve a bug that shows up when 
	    acm=2 was used. From Dietmar's mail message: 
	      if we use the acm=2 option we must set the nrd and nrs 
	      defaults to 0.
	
	*   src/spicelib/devices/mos3/mos3temp.c: As suggested by Dietmar 
	    Warning <warning@danalyse.de> I removed the >1um limit for the 
	    model.    

 
2004-07-08  Paolo Nenzi <p.nenzi@ieee.org>

	*   Applied Al Niessner <Al.Niessner@jpl.nasa.gov> negabyte patch
	    that removed all compiler warnings. 
	    
	*   configure.in, src/xspice/icm/makedefs.in, tests/Makefile.am,
	    xgraph/aclocal.m4, xgraph/configure.in, xgraph/configure: updated 
	    configuration files for autoconf V2.59 automake V1.8.

2004-07-05  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/frontend/resource.c: added __APPLE__ for mac osx support as in
	    patch sent by Khairulmizam Samsudin <kmbs@hotmail.com>
	
	*   src/spicelib/parser/inpdomod.c: fixed some typos as in patch
	    sent by Khairulmizam Samsudin <kmbs@hotmail.com>
	    
2004-06-22  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/spicelib/devices/vbic: Vbic code updated. Thanks to Dietmar 
	    Warning (warning@danalyse.de )now we have the four terminal 
	    version of the VBIC model. The old three terminal version has 
	    been discarded.

2004-06-21  Paolo Nenzi <p.nenzi@ieee.org>

	*   src/frontend/subckt.c: patch from Stuart Brorson
	    <sdb@cloud9.net>. This patch adresses the following
	    problem (as written by Stuart):
	    Modified modtranslate and devmodtranslate to fix bug noticed 
	    by Liu:  codemodel names called out in the device instantiation 
	    line ("A1 1 2 3 4 lim") were not translated correctly if they 
	    were invoked inside a .subckt.  Fix involved explicitly adding 